# image-tagger

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  image_metadata.csv  justfile  pyproject.toml
gallery2/: image_metadata.csv  index.html
gallery3/: image_metadata.csv  index.html
notebooks/: Image Tagger Test.ipynb  clip-test.ipynb  image-tagger-test.ipynb
src/: Image Tagger Test.ipynb  cli.py  constants.py  convert.py  convert_uploads.py  image_tagger.py  rename_uploads.py  tag_uploads.py  template.html  util.py
src/image_tagger_data/: __init__.py  image_prompt.md  template.html  wall_template.html
tests/: test_cli_workflow.py
tests/images/: horror.heic  memes.avif  vintage.tiff
