[project]

name = "image-tagger"
version = "0.2.0"
description = "Tag, categorize, and clean up images with vision models."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "ollama>=0.6.2",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pillow-avif-plugin>=1.5.5",
    "pillow-heif>=1.1.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
    "ty>=0.0.44",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
py-modules = ["cli", "constants", "convert", "image_tagger", "util"]
packages = ["image_tagger_data"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
image_tagger_data = ["*"]

[tool.ruff.lint]
select = [
    "E",   # PEP 8
    "F",   # Pyflakes
    "I",   # import sort
    "B",   # bugbear
    "UP",  # PyUpgrade
    "TRY", # Tryceratops
]
ignore = [
    "E501",   # line length
    "TRY003", # long exception messages
    "TRY300", # return outside of else
    "B905",   # explicit strict in zip()
]
